--- a/views/about.hbs
+++ b/views/about.hbs
@@ -5,7 +5,7 @@
     <h1>About</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam illum incidunt corporis aliquid repellat obcaecati fugit optio quam id. Cumque facere eligendi aut hic, perspiciatis distinctio quaerat quae inventore odio consequatur vel commodi aspernatur nihil minima debitis nobis at, et suscipit magni repellat, in sequi. Suscipit quaerat quisquam distinctio a?</p>
 </div>
-<section>
+<section id="about-section">
     <article id="firstArticle">
         <div>
             <h2 id="stack">Current Stack</h2>
