modifi to work properly

--- a/public/css/about.css
+++ b/public/css/about.css
@@ -128,10 +128,10 @@
     color: rgb(133, 133, 133);
 }
 
-#goal {
+#about-section #goal {
     margin-bottom: 71px;
 }
 
-#improve {
+#about-section #improve {
     margin-bottom: 53px;
 }
