--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -1,9 +1,10 @@
 <div>
     <a id="back-home" href="/">Home</a>
 </div>
+<h1>Projects</h1>
 <section id="projects-section">
     <div id="project-box">
-        <h1>Crypto</h1>
-        <button><a href="https://crypto-project-backend.herokuapp.com/">Check It</a></button>
+        <h2>Crypto</h2>
+        <a href="https://crypto-project-backend.herokuapp.com/">Check It</a>
     </div>
 </section>
