--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/style.css">
     <title>Daniel's Portfolio</title>
 </head>
@@ -14,6 +15,10 @@
         {{{body}}}
 
         <footer>
+            <a href="https://www.facebook.com/profile.php?id=100003143973501" id="facebook" class="fa fa-facebook"></a>
+            <a href="https://twitter.com/DanielDelchev13" id="twitter" class="fa fa-twitter"></a>
+            <a href="https://www.linkedin.com/in/daniel-delchev-a135b923b/" id="linkedin" class="fa fa-linkedin"></a>
+            <a href="https://github.com/DanielDelchev1301" id="github" class="fa fa-github"></a>
             <p>Daniel Delchev <span>&copy;2022</span></p>
         </footer>
 
