remove an unnecessary attributes

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,5 +1,5 @@
 <div id="home-container">
-    <a href="/about" data-hover="About" id="firstTitle"></a>
-    <a href="/projects" data-hover="Projects" id="secondTitle"></a>
-    <a href="/contact" data-hover="Contact" id="thirdTitle"></a>
+    <a href="/about" id="firstTitle"></a>
+    <a href="/projects" id="secondTitle"></a>
+    <a href="/contact" id="thirdTitle"></a>
 </div>
