--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -93,28 +93,27 @@
     100% { opacity: 1; }
 }
 
-#form-box a {
+#form-box button {
     display: inline-block;
     margin: 10px;
     padding: 5px 15px;
     font-size: 30px;
-    text-decoration: none;
     color: white;
     background-color: #4848ec;
     border: 1px solid;
     border-radius: 10%;
-    animation-name: ancorPopUp;
+    animation-name: buttonPopUp;
     animation-duration: 3s;
     animation-iteration-count: 1;
 }
 
-@keyframes ancorPopUp {
+@keyframes buttonPopUp {
     0% { opacity: 0; }
     82% { opacity: 0; }
     100% { opacity: 1; }
 }
 
-#form-box a:hover {
+#form-box button:hover {
     background-color: white;
     color: #4848ec;
     border: 1px solid #4848ec;
