--- a/views/about.hbs
+++ b/views/about.hbs
@@ -3,7 +3,7 @@
 </div>
 <div id="aboutText">
     <h1>About</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam illum incidunt corporis aliquid repellat obcaecati fugit optio quam id. Cumque facere eligendi aut hic, perspiciatis distinctio quaerat quae inventore odio consequatur vel commodi aspernatur nihil minima debitis nobis at, et suscipit magni repellat, in sequi. Suscipit quaerat quisquam distinctio a?</p>
+    <p>Hello, my name is Daniel and I am currently learning everything related to software engineering and specifically web development. I enjoy building complete web applications, both styling them and being responsible for the client side of things as well as the server side. I am very dedicated to my goals and I work hard until I achieve them, I like to work in a team, share ideas with the people around me and learn from each other. I believe that if you really want something you will achieve it, not by being perfect, and by not stopping trying.</p>
 </div>
 <section id="about-section">
     <article id="firstArticle">
