--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -22,7 +22,7 @@
 
         <form action="/contact" method="POST" id="form-box">
 
-            <label class="labels" for="email">Email:</label>
+            <label class="labels" id="email-label" for="email">Email:</label>
             <input type="email" name="email" id="email">
 
             <label class="labels" id="label-for-description" for="description">Description:</label>
