--- a/views/home.hbs
+++ b/views/home.hbs
@@ -2,4 +2,5 @@
     <a href="/about" id="firstTitle"></a>
     <a href="/projects" id="secondTitle"></a>
     <a href="/contact" id="thirdTitle"></a>
+    <a href="/certificates" id="fourthTitle"></a>
 </div>
