--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -1,7 +1,7 @@
 <div id="back-home-box">
     <a id="back-home" href="/">Home</a>
 </div>
-<h1>Projects</h1>
+<h1 id="project-page-title">Projects</h1>
 <section id="projects-section">
     <div id="project-box">
         <h2>Crypto</h2>
